# clones-solana-programs

./: .eslintrc.js  .gitignore  README.md  env.example  jest.config.js  jest.integration.config.js  package-lock.json  package.json  tsconfig.json
client/: tsconfig.json
client/src/: index.ts  reward-pool-client.ts
docs/: architecture.md  deployment.md  security.md
examples/: basic-usage.ts
programs/reward-pool/: Cargo.toml
programs/reward-pool/src/: lib.rs
scripts/: deploy.ts
tests/: setup.ts
tests/unit/: reward-pool-client.test.ts
