[package]
name = "reward-pool"
version = "1.0.0"
edition = "2021"
description = "Smart contract for automated reward distribution with platform fees"
authors = ["Clones Team"]
license = "MIT"

[dependencies]
solana-program = "2.3.0"
spl-token = { version = "8.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "7.0.0", features = ["no-entrypoint"] }
borsh = "1.5.7"
borsh-derive = "1.5.7"
thiserror = "2.0.12"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
